--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ attrs==23.2.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
 comm==0.2.2
+dataclasses-json==0.6.7
 debugpy==1.8.2
 decorator==5.1.1
 distro==1.9.0
@@ -25,16 +26,21 @@ jsonpointer==3.0.0
 jupyter_client==8.6.2
 jupyter_core==5.7.2
 langchain==0.2.10
+langchain-community==0.2.7
 langchain-core==0.2.22
+langchain-openai==0.1.17
 langchain-text-splitters==0.2.2
 langsmith==0.1.92
+marshmallow==3.21.3
 matplotlib-inline==0.1.7
 multidict==6.0.5
+mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 numpy==1.26.4
 openai==1.36.0
 orjson==3.10.6
 packaging==24.1
+pandas==2.2.2
 parso==0.8.4
 pexpect==4.9.0
 platformdirs==4.2.2
@@ -47,18 +53,23 @@ pydantic_core==2.20.1
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.1
 PyYAML==6.0.1
 pyzmq==26.0.3
+regex==2024.7.24
 requests==2.32.3
 six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.31
 stack-data==0.6.3
 tenacity==8.5.0
+tiktoken==0.7.0
 tornado==6.4.1
 tqdm==4.66.4
 traitlets==5.14.3
+typing-inspect==0.9.0
 typing_extensions==4.12.2
+tzdata==2024.1
 urllib3==2.2.2
 wcwidth==0.2.13
 yarl==1.9.4
