--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,14 +5,17 @@ anyio==4.4.0
 appnope==0.1.4
 asttokens==2.4.1
 attrs==23.2.0
+blinker==1.8.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
+click==8.1.7
 comm==0.2.2
 dataclasses-json==0.6.7
 debugpy==1.8.2
 decorator==5.1.1
 distro==1.9.0
 executing==2.0.1
+Flask==3.0.3
 frozenlist==1.4.1
 h11==0.14.0
 httpcore==1.0.5
@@ -20,7 +23,9 @@ httpx==0.27.0
 idna==3.7
 ipykernel==6.29.5
 ipython==8.26.0
+itsdangerous==2.2.0
 jedi==0.19.1
+Jinja2==3.1.4
 jsonpatch==1.33
 jsonpointer==3.0.0
 jupyter_client==8.6.2
@@ -31,6 +36,7 @@ langchain-core==0.2.22
 langchain-openai==0.1.17
 langchain-text-splitters==0.2.2
 langsmith==0.1.92
+MarkupSafe==2.1.5
 marshmallow==3.21.3
 matplotlib-inline==0.1.7
 multidict==6.0.5
@@ -72,4 +78,5 @@ typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 wcwidth==0.2.13
+Werkzeug==3.0.3
 yarl==1.9.4
