--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,6 +18,7 @@ dataclasses-json==0.6.7
 debugpy==1.8.2
 decorator==5.1.1
 distro==1.9.0
+docarray==0.40.0
 executing==2.0.1
 firebase-admin==6.5.0
 Flask==3.0.3
@@ -54,9 +55,11 @@ langchain-core==0.2.24
 langchain-openai==0.1.17
 langchain-text-splitters==0.2.2
 langsmith==0.1.92
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.3
 matplotlib-inline==0.1.7
+mdurl==0.1.2
 msgpack==1.0.8
 multidict==6.0.5
 mypy-extensions==1.0.0
@@ -90,6 +93,7 @@ PyYAML==6.0.1
 pyzmq==26.0.3
 regex==2024.7.24
 requests==2.32.3
+rich==13.7.1
 rsa==4.9
 six==1.16.0
 sniffio==1.3.1
@@ -100,6 +104,7 @@ tiktoken==0.7.0
 tornado==6.4.1
 tqdm==4.66.4
 traitlets==5.14.3
+types-requests==2.32.0.20240712
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.1
