--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ anyio==4.4.0
 appnope==0.1.4
 asttokens==2.4.1
 attrs==23.2.0
+beautifulsoup4==4.12.3
 blinker==1.8.2
 CacheControl==0.14.0
 cachetools==5.4.0
@@ -22,6 +23,7 @@ docarray==0.40.0
 executing==2.0.1
 firebase-admin==6.5.0
 Flask==3.0.3
+Flask-Cors==4.0.1
 frozenlist==1.4.1
 google-api-core==2.19.1
 google-api-python-client==2.138.0
@@ -97,6 +99,7 @@ rich==13.7.1
 rsa==4.9
 six==1.16.0
 sniffio==1.3.1
+soupsieve==2.5
 SQLAlchemy==2.0.31
 stack-data==0.6.3
 tenacity==8.5.0
@@ -112,4 +115,5 @@ uritemplate==4.1.1
 urllib3==2.2.2
 wcwidth==0.2.13
 Werkzeug==3.0.3
+wikipedia==1.4.0
 yarl==1.9.4
