--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -54,6 +54,7 @@ jupyter_core==5.7.2
 langchain==0.2.11
 langchain-community==0.2.7
 langchain-core==0.2.24
+langchain-experimental==0.0.63
 langchain-openai==0.1.17
 langchain-text-splitters==0.2.2
 langsmith==0.1.92
@@ -66,6 +67,7 @@ msgpack==1.0.8
 multidict==6.0.5
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
+numexpr==2.10.1
 numpy==1.26.4
 openai==1.36.0
 orjson==3.10.6
