--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "firebase": "^10.12.4",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
